# syspro-cpp-vrisc-task

./: .clang-format  emulator.hpp  main.cpp  meson.build  test_emulator.cpp
